<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/music_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world" />
    <ListView android:layout_width="match_parent"
        android:layout_height="200dip"
        android:scrollbarStyle="outsideOverlay"
        android:id="@+id/ListView01" />
    <SeekBar
        android:id="@+id/progress" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal" />
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
		<TextView
	        android:id="@+id/time_1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft ="true" />
		<TextView
	        android:id="@+id/time_2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight ="true" />
	</RelativeLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">"
        <Button
            android:id="@+id/Prev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/Prev" />
	    <Button
	        android:id="@+id/play"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".20"
	        android:text="@string/Play" />
	    <Button
            android:id="@+id/Next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".15"
            android:text="@string/Next" />
	    <Button
	        android:id="@+id/stop"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".20"
	        android:text="@string/Stop" />
	    <Button
	        android:id="@+id/Exit"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".20"
	        android:text="@string/Exit" />
	    <Button
            android:id="@+id/Mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".10"
            android:text="@string/Mode1" />
    </LinearLayout>
</LinearLayout>
